--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,15 +2,19 @@ name = "durak9"
 main = "src/index.ts"
 compatibility_date = "2026-01-15"
 
+[[d1_databases]]
+binding = "DB"
+database_name = "durak_db"
+database_id = "ee15230e-4103-4bc8-854b-3bb234949989"
+
+[[durable_objects.bindings]]
+name = "MM"
+class_name = "MatchmakerDO"
+
 [[durable_objects.bindings]]
 name = "ROOM"
 class_name = "RoomDO"
 
 [[migrations]]
 tag = "v1"
-new_sqlite_classes = ["RoomDO"]
-
-[[d1_databases]]
-binding = "DB"
-database_name = "durak_db"
-database_id = "ee15230e-4103-4bc8-854b-3bb234949989"
+new_sqlite_classes = ["MatchmakerDO", "RoomDO"]
